@@ -3,17 +3,15 @@ package com.swirlds.platform.gossip;
 
 import static com.swirlds.logging.legacy.LogMarker.EXCEPTION;
 
-import com.google.common.collect.ImmutableList;
 import com.hedera.hapi.node.base.SemanticVersion;
 import com.hedera.hapi.node.state.roster.Roster;
 import com.hedera.hapi.node.state.roster.RosterEntry;
 import com.swirlds.common.context.PlatformContext;
-import com.swirlds.common.merkle.synchronization.config.ReconnectConfig;
 import com.swirlds.component.framework.model.WiringModel;
 import com.swirlds.component.framework.wires.input.BindableInputWire;
+import com.swirlds.component.framework.wires.input.NoInput;
 import com.swirlds.component.framework.wires.output.StandardOutputWire;
 import com.swirlds.platform.gossip.shadowgraph.ShadowgraphSynchronizer;
-import com.swirlds.platform.metrics.ReconnectMetrics;
 import com.swirlds.platform.metrics.SyncMetrics;
 import com.swirlds.platform.network.PeerCommunication;
 import com.swirlds.platform.network.PeerInfo;
@@ -21,28 +19,22 @@ import com.swirlds.platform.network.communication.handshake.VersionCompareHandsh
 import com.swirlds.platform.network.protocol.HeartbeatProtocol;
 import com.swirlds.platform.network.protocol.Protocol;
 import com.swirlds.platform.network.protocol.ProtocolRunnable;
-import com.swirlds.platform.network.protocol.ReconnectStateSyncProtocol;
-import com.swirlds.platform.network.protocol.ReservedSignedStateResult;
+import com.swirlds.platform.network.protocol.SyncProtocol;
 import com.swirlds.platform.network.protocol.rpc.RpcProtocol;
-import com.swirlds.platform.reconnect.ReconnectStateTeacherThrottle;
-import com.swirlds.platform.state.signed.ReservedSignedState;
-import com.swirlds.platform.wiring.NoInput;
 import com.swirlds.platform.wiring.components.Gossip;
-import com.swirlds.state.StateLifecycleManager;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.security.cert.X509Certificate;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.function.Supplier;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.hiero.base.concurrent.BlockingResourceProvider;
 import org.hiero.base.crypto.CryptoUtils;
 import org.hiero.consensus.concurrent.manager.ThreadManager;
 import org.hiero.consensus.concurrent.pool.CachedPoolParallelExecutor;
 import org.hiero.consensus.event.IntakeEventCounter;
+import org.hiero.consensus.gossip.config.ProtocolConfig;
 import org.hiero.consensus.model.event.PlatformEvent;
 import org.hiero.consensus.model.gossip.SyncProgress;
 import org.hiero.consensus.model.hashgraph.EventWindow;
@@ -61,11 +53,10 @@ public class SyncGossipModular implements Gossip {
     private static final Logger logger = LogManager.getLogger(SyncGossipModular.class);
 
     private final PeerCommunication network;
-    private final ImmutableList<Protocol> protocols;
+    private final List<Protocol> protocols;
     private final RpcProtocol rpcProtocol;
     private final FallenBehindMonitor fallenBehindMonitor;
     private final ShadowgraphSynchronizer synchronizer;
-    private final StateLifecycleManager stateLifecycleManager;
 
     // this is not a nice dependency, should be removed as well as the sharedState
     private Consumer<PlatformEvent> receivedEventHandler;
@@ -74,20 +65,15 @@ public class SyncGossipModular implements Gossip {
     /**
      * Builds the gossip engine, depending on which flavor is requested in the configuration.
      *
-     * @param platformContext                  the platform context
-     * @param threadManager                    the thread manager
-     * @param ownKeysAndCerts                  private keys and public certificates for this node
-     * @param roster                           the current roster
-     * @param selfId                           this node's ID
-     * @param appVersion                       the version of the app
-     * @param stateLifecycleManager            manages the mutable state
-     * @param latestCompleteState              holds the latest signed state that has enough signatures to be
-     *                                         verifiable
-     * @param intakeEventCounter               keeps track of the number of events in the intake pipeline from each
-     *                                         peer
-     * @param fallenBehindMonitor              an instance of the fallenBehind Monitor which tracks if the node has
-     *                                         fallen behind
-     * @param reservedSignedStateResultPromise a mechanism to get a SignedState or block while it is not available
+     * @param platformContext the platform context
+     * @param threadManager the thread manager
+     * @param ownKeysAndCerts private keys and public certificates for this node
+     * @param roster the current roster
+     * @param selfId this node's ID
+     * @param appVersion the version of the app
+     * @param intakeEventCounter keeps track of the number of events in the intake pipeline from each peer
+     * @param fallenBehindMonitor an instance of the fallenBehind Monitor which tracks if the node has fallen behind
+     * @param reconnectProtocol the reconnect protocol to use
      */
     public SyncGossipModular(
             @NonNull final PlatformContext platformContext,
@@ -96,11 +82,9 @@ public class SyncGossipModular implements Gossip {
             @NonNull final Roster roster,
             @NonNull final NodeId selfId,
             @NonNull final SemanticVersion appVersion,
-            @NonNull final StateLifecycleManager stateLifecycleManager,
-            @NonNull final Supplier<ReservedSignedState> latestCompleteState,
             @NonNull final IntakeEventCounter intakeEventCounter,
             @NonNull final FallenBehindMonitor fallenBehindMonitor,
-            @NonNull final BlockingResourceProvider<ReservedSignedStateResult> reservedSignedStateResultPromise) {
+            @NonNull final Protocol reconnectProtocol) {
 
         final RosterEntry selfEntry = RosterUtils.getRosterEntry(roster, selfId.id());
         final X509Certificate selfCert = RosterUtils.fetchGossipCaCertificate(selfEntry);
@@ -122,7 +106,6 @@ public class SyncGossipModular implements Gossip {
         this.network = new PeerCommunication(platformContext, peers, selfPeer, ownKeysAndCerts);
 
         this.fallenBehindMonitor = fallenBehindMonitor;
-        this.stateLifecycleManager = stateLifecycleManager;
 
         final ProtocolConfig protocolConfig = platformContext.getConfiguration().getConfigData(ProtocolConfig.class);
 
@@ -152,11 +135,9 @@ public class SyncGossipModular implements Gossip {
                 fallenBehindMonitor,
                 event -> receivedEventHandler.accept(event));
 
-        final ReconnectStateSyncProtocol reconnectStateSyncProtocol = createStateSyncProtocol(
-                platformContext, threadManager, latestCompleteState, reservedSignedStateResultPromise);
-        this.protocols = ImmutableList.of(
+        this.protocols = List.of(
                 HeartbeatProtocol.create(platformContext, this.network.getNetworkMetrics()),
-                reconnectStateSyncProtocol,
+                reconnectProtocol,
                 rpcProtocol);
 
         final VersionCompareHandshake versionCompareHandshake =
@@ -167,47 +148,13 @@ public class SyncGossipModular implements Gossip {
     }
 
     /**
-     * Utility method for creating ReconnectProtocol from shared state, while staying compatible with pre-refactor code
-     *
-     * @param platformContext     the platform context
-     * @param threadManager       the thread manager
-     * @param latestCompleteState holds the latest signed state that has enough signatures to be verifiable
-     * @return constructed ReconnectProtocol
-     */
-    public ReconnectStateSyncProtocol createStateSyncProtocol(
-            @NonNull final PlatformContext platformContext,
-            @NonNull final ThreadManager threadManager,
-            @NonNull final Supplier<ReservedSignedState> latestCompleteState,
-            @NonNull final BlockingResourceProvider<ReservedSignedStateResult> reservedSignedStateResultPromise) {
-
-        final ReconnectConfig reconnectConfig =
-                platformContext.getConfiguration().getConfigData(ReconnectConfig.class);
-
-        final ReconnectStateTeacherThrottle reconnectStateTeacherThrottle =
-                new ReconnectStateTeacherThrottle(reconnectConfig, platformContext.getTime());
-
-        final ReconnectMetrics reconnectMetrics = new ReconnectMetrics(platformContext.getMetrics());
-
-        return new ReconnectStateSyncProtocol(
-                platformContext,
-                threadManager,
-                reconnectStateTeacherThrottle,
-                latestCompleteState,
-                reconnectConfig.asyncStreamTimeout(),
-                reconnectMetrics,
-                fallenBehindMonitor,
-                reservedSignedStateResultPromise,
-                stateLifecycleManager);
-    }
-
-    /**
      * Modify list of current connected peers. Notify all underlying components and start needed threads. In the case
      * data for the same peer changes (one with the same nodeId), it should be present in both removed and added lists,
      * with old data in removed and fresh data in added. Internally it will be first removed and then added, so there
      * can be a short moment when it will drop out of the network if disconnect happens at a bad moment. NOT THREAD
      * SAFE. Synchronize externally.
      *
-     * @param added   peers to be added
+     * @param added peers to be added
      * @param removed peers to be removed
      */
     public void addRemovePeers(@NonNull final List<PeerInfo> added, @NonNull final List<PeerInfo> removed) {
